--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<html>
-    <head>
-    <title>I am a title!</title>
-    </head>
-    <body>
-        <h1>I'm a header 1!</h1>
-        Hi Ajnan here.
-    </body>
-</html>
+<img src="https://octodex.github.com/images/vinyltocat.png">
