--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<img src="https://octodex.github.com/images/vinyltocat.png">
+<html>
+    <body>
+        <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+    </body>
+</html>
