--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <ol>
     <li>This</li>
